# axum-vite-docker

./: .dockerignore  Dockerfile  package.json
backend/: Cargo.toml
backend/src/: main.rs  testcase.txt
client/src/: App.tsx
