[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.16"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs","cors"] }
tower = "0.5"
wallet-adapter = "1.1.2"
