[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.21"
bs58 = "0.5"
dotenv = "0.15"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.18"
solana-program = "1.18"
spl-associated-token-account = "2.3"
spl-token = "4.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs","cors"] }
tower = "0.5"
wallet-adapter = "1.1.2"
solana-sdk = "1.18"
